Configured rendering of some definitions Figure still a WIP Getting type errors in sanityImageUrl

--- a/apps/site-astro/src/components/PortableText/custom/Callout.astro
+++ b/apps/site-astro/src/components/PortableText/custom/Callout.astro
@@ -1,17 +1,9 @@
 ---
 import type { Props as $ } from "astro-portabletext/types";
-import { Debug } from "astro/components";
-export type Props = $<CalloutNode>;
+import type { CalloutBlock } from "content-models";
+export type Props = $<CalloutBlock>;
 
-type CalloutNode = {
-  text: string;
-  key: string;
-  type: string;
-  _type: "callout";
-};
-
-const props = Astro.props;
-const { isInline, node } = props;
+const { node } = Astro.props;
 
 // TODO copy details from PLL, tailwind, cva, cn, etc
 ---
@@ -19,7 +11,6 @@ const { isInline, node } = props;
 <aside>
   <h2>{node.type}</h2>
   <p>{node.text}</p>
-  <Debug {props} />
 </aside>
 
 <style></style>
