--- a/apps/site-astro/src/components/PortableText/Type.astro
+++ b/apps/site-astro/src/components/PortableText/Type.astro
@@ -2,15 +2,21 @@
 import type { Props as ComponentProps } from "astro-portabletext/types";
 import { usePortableText } from "astro-portabletext/utils";
 import Callout, { type Props as CalloutProps } from "./custom/Callout.astro";
+import Image, { type Props as ImageProps } from "./custom/Image.astro";
 
 // Use a Union here to add more components
-export type Props = CalloutProps;
+export type Props = CalloutProps | ImageProps;
 
 const props = Astro.props;
 const typeIs = (type: string) => type === props.node._type;
 const { getDefaultComponent } = usePortableText(props.node);
 
-const Cmp = typeIs("callout") ? Callout : getDefaultComponent();
+// Each component should be added to this ternary
+const Cmp = typeIs("callout")
+  ? Callout
+  : typeIs("image")
+  ? Image
+  : getDefaultComponent();
 ---
 
 <Cmp {...props} />
