--- a/apps/site-astro/src/components/PortableText/custom/Image.astro
+++ b/apps/site-astro/src/components/PortableText/custom/Image.astro
@@ -21,11 +21,12 @@ const image = urlForImage(node.asset._ref).width(width).auto("format");
   data-action="zoom"
   width={width}
   height={height}
-/>;
+/>
 
 <style>
   /* TODO move this to a global style */
   img {
+    max-width: 100%;
     height: auto;
   }
 </style>
