--- a/apps/site-astro/src/components/PortableText/Mark.astro
+++ b/apps/site-astro/src/components/PortableText/Mark.astro
@@ -1,5 +1,6 @@
 ---
 import { Mark as PortableTextMark } from "astro-portabletext/components";
+import InternalLink from "./custom/InternalLink.astro";
 
 export type Props = Parameters<typeof PortableTextMark>[0];
 
@@ -7,8 +8,7 @@ const props = Astro.props;
 const markTypeIs = (markType: string) => markType === props.node.markType;
 
 // Use `markTypeIs` to setup chained ternary operators to define custom marks
-// const Cmp = markTypeIs("unicorn") ? Unicorn : Mark;
-const Cmp = PortableTextMark;
+const Cmp = markTypeIs("internalLink") ? InternalLink : PortableTextMark;
 ---
 
 <Cmp {...props}><slot /></Cmp>
