Fixed some issues in minor refactor

--- a/apps/site-astro/src/components/PortableText/custom/Image.astro
+++ b/apps/site-astro/src/components/PortableText/custom/Image.astro
@@ -1,7 +1,7 @@
 ---
 import type { Props as $ } from "astro-portabletext/types";
 import type { ImageBlock } from "content-models";
-import { urlForImage } from "@/util/sanityImageUrl";
+import { urlForImage } from "@/lib/sanityImageUrl";
 
 export type Props = $<ImageBlock>;
 
