--- a/apps/site-astro/src/components/PortableText/custom/Figure.astro
+++ b/apps/site-astro/src/components/PortableText/custom/Figure.astro
@@ -1,7 +1,7 @@
 ---
 import type { Props as $ } from "astro-portabletext/types";
 import type { FigureBlock } from "content-models";
-import { urlForImage } from "@/util/sanityImageUrl";
+import { urlForImage } from "@/lib/sanityImageUrl";
 import PortableText from "../PortableText.astro";
 export type Props = $<FigureBlock>;
 
