--- a/apps/site-astro/src/components/PortableText/custom/Callout.astro
+++ b/apps/site-astro/src/components/PortableText/custom/Callout.astro
@@ -1,17 +1,41 @@
 ---
+import { Alert, AlertDescription, alertVariants } from "@/components/ui/alert";
 import type { Props as $ } from "astro-portabletext/types";
+import type { VariantProps } from "class-variance-authority";
 import type { CalloutBlock } from "content-models";
+import { AlertCircle, CheckCircle, HelpCircle } from "lucide-react";
 import PortableText from "../PortableText.astro";
 export type Props = $<CalloutBlock>;
 
 const { node } = Astro.props;
 
-// TODO copy details from PLL, tailwind, cva, cn, etc
+let Icon;
+let alertVariant: VariantProps<typeof alertVariants>["variant"];
+switch (node.type) {
+  case "success":
+    alertVariant = "sucess";
+    Icon = CheckCircle;
+    break;
+  case "info":
+    alertVariant = "info";
+    Icon = HelpCircle;
+    break;
+  case "warning":
+    alertVariant = "warning";
+    Icon = AlertCircle;
+    break;
+  case "danger":
+    alertVariant = "destructive";
+    Icon = AlertCircle;
+    break;
+  default:
+    alertVariant = "default";
+    Icon = HelpCircle;
+    break;
+}
 ---
 
-<aside>
-  <h2>{node.type}</h2>
-  <PortableText value={node.body} />
-</aside>
-
-<style></style>
+<Alert variant={alertVariant}>
+  <Icon className="h-4 w-4" />
+  <AlertDescription><PortableText value={node.body} /></AlertDescription>
+</Alert>
