--- a/apps/site-astro/src/layouts/Layout.astro
+++ b/apps/site-astro/src/layouts/Layout.astro
@@ -15,6 +15,10 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Inter"
+		/>
 		<title>{title}</title>
 	</head>
 	<body>
