Added Style Guide Added tailwind typograph Added Inter font from Google Added "isVisible" to post model Updated queries for "isVisible" Added getPost() query

--- a/apps/site-astro/src/components/PortableText/custom/Callout.astro
+++ b/apps/site-astro/src/components/PortableText/custom/Callout.astro
@@ -29,13 +29,13 @@ switch (node.type) {
     Icon = AlertCircle;
     break;
   default:
-    alertVariant = "default";
+    alertVariant = "info";
     Icon = HelpCircle;
     break;
 }
 ---
 
-<Alert variant={alertVariant}>
+<Alert variant={alertVariant} className="not-prose">
   <Icon className="h-4 w-4" />
   <AlertDescription><PortableText value={node.body} /></AlertDescription>
 </Alert>
