--- a/apps/site-astro/src/layouts/Layout.astro
+++ b/apps/site-astro/src/layouts/Layout.astro
@@ -15,9 +15,11 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Inter"
 		/>
 		<title>{title}</title>
 	</head>
