Updated callout styles within prose-custom

--- a/apps/site-astro/src/components/PortableText/custom/Callout.astro
+++ b/apps/site-astro/src/components/PortableText/custom/Callout.astro
@@ -35,7 +35,7 @@ switch (node.type) {
 }
 ---
 
-<Alert variant={alertVariant} className="not-prose">
+<Alert variant={alertVariant} className="callout not-prose">
   <Icon className="h-4 w-4" />
   <AlertDescription><PortableText value={node.body} /></AlertDescription>
 </Alert>
