Updated Layout, Added Metadata

--- a/apps/site-astro/src/layouts/Layout.astro
+++ b/apps/site-astro/src/layouts/Layout.astro
@@ -1,17 +1,12 @@
 ---
 import "src/styles/global.css";
-export interface Props {
-	title: string;
-}
-
-const { title } = Astro.props;
+import MetaTags from "@/components/MetaTags.astro";
 ---
 
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
@@ -21,7 +16,9 @@ const { title } = Astro.props;
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
-		<title>{title}</title>
+		<slot name="metadata">
+			<MetaTags />
+		</slot>
 	</head>
 	<body>
 		<slot />
