--- a/apps/site-astro/src/pages/blog/[slug].astro
+++ b/apps/site-astro/src/pages/blog/[slug].astro
@@ -3,6 +3,8 @@ import Layout from "@/layouts/Layout.astro";
 import { getAllPostsFull } from "@/queries/post";
 import PortableText from "@/components/PortableText/PortableText.astro";
 import type { InferGetStaticPropsType } from "astro";
+import { titleTemplate } from "@/lib/metadata";
+import MetaTags from "@/components/MetaTags.astro";
 
 export async function getStaticPaths() {
   const data = await getAllPostsFull();
@@ -25,7 +27,12 @@ type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 const { post } = Astro.props as Props;
 ---
 
-<Layout title={post.title}>
+<Layout>
+  <MetaTags
+    title={titleTemplate(post.title)}
+    description={post.description}
+    slot="metadata"
+  />
   <article class="prose-custom content-container">
     <h1>{post.title}</h1>
     {post.body && <PortableText value={post.body} />}
