--- a/apps/site-astro/src/pages/blog/index.astro
+++ b/apps/site-astro/src/pages/blog/index.astro
@@ -4,7 +4,7 @@ import { getAllPostsList } from "@/queries/post";
 const data = await getAllPostsList();
 ---
 
-<Layout title="Posts">
+<Layout>
 	<h1>Posts</h1>
 	{
 		data &&
