--- a/apps/site-astro/src/pages/resources/[slug].astro
+++ b/apps/site-astro/src/pages/resources/[slug].astro
@@ -35,9 +35,22 @@ const { resource } = Astro.props as Props;
   />
   <article class="prose-custom content-container">
     <h1>{resource.title}</h1>
+    <p>{resource.url}</p>
 
     {resource.tags && <TagsList tags={resource.tags} asLinks={true} />}
-    <h2>TODO Resource content rendering</h2>
-    <p>{resource.url}</p>
+
+    <!-- TODO render this as a nice list -->
+    <!-- TODO "referenced in" query results to articles, concepts -->
+    {
+      resource.resourceContent &&
+        resource.resourceContent.map((rc) => {
+          return (
+            <div>
+              <h3>{rc.title}</h3>
+              <p>{rc.description}</p>
+            </div>
+          );
+        })
+    }
   </article>
 </Layout>
