Render Tags index route

--- a/apps/site-astro/src/components/content/TagsList.astro
+++ b/apps/site-astro/src/components/content/TagsList.astro
@@ -2,7 +2,7 @@
 import { Badge, badgeVariants } from "@/components/ui/badge";
 import { getUrlForSanityType } from "@/lib/url";
 import { cn } from "@/lib/utils";
-import type { TagsResult } from "@/queries/partials/tags";
+import type { TagsResult } from "@/queries/partials/tag";
 import type { VariantProps } from "class-variance-authority";
 
 interface Props {
