--- a/apps/site-astro/src/components/content/BacklinksList.astro
+++ b/apps/site-astro/src/components/content/BacklinksList.astro
@@ -13,9 +13,10 @@ import type { Backlink, BacklinkResult } from "@/queries/partials/backlink";
 interface Props {
   backlinks: BacklinkResult;
   className?: string;
+  grouped?: boolean;
 }
 
-const { backlinks, className } = Astro.props;
+const { backlinks, className, grouped = false } = Astro.props;
 
 // Resource content will not have its own page
 // grab the resource content's parent resource data instead
@@ -60,23 +61,42 @@ const buckets = backlinks ? bucketBacklinksByType(backlinks) : [];
 ---
 
 {
-  Object.entries(buckets)
-    .filter(([type, backlinks]) => backlinks.length > 0)
-    .map(([type, backlinks]) => (
-      <div>
-        <h3>{getSanityTypeDisplayText(type, true)}</h3>
-        <div class={cn("flex flex-col gap-4 not-prose", className)}>
-          {backlinks.map((backlink) => (
-            <a href={getBacklinkUrl(backlink)}>
-              <Card>
-                <CardHeader>
-                  <CardTitle>{backlink.title}</CardTitle>
-                  <CardDescription>{backlink.description}</CardDescription>
-                </CardHeader>
-              </Card>
-            </a>
-          ))}
+  !grouped && (
+    <div class={cn("flex flex-col gap-4 not-prose", className)}>
+      {backlinks &&
+        backlinks.map((backlink) => (
+          <a href={getBacklinkUrl(backlink)}>
+            <Card>
+              <CardHeader>
+                <CardTitle>{backlink.title}</CardTitle>
+                <CardDescription>{backlink.description}</CardDescription>
+              </CardHeader>
+            </Card>
+          </a>
+        ))}
+    </div>
+  )
+}
+
+{
+  grouped &&
+    Object.entries(buckets)
+      .filter(([type, backlinks]) => backlinks.length > 0)
+      .map(([type, backlinks]) => (
+        <div>
+          <h3>{getSanityTypeDisplayText(type, true)}</h3>
+          <div class={cn("flex flex-col gap-4 not-prose", className)}>
+            {backlinks.map((backlink) => (
+              <a href={getBacklinkUrl(backlink)}>
+                <Card>
+                  <CardHeader>
+                    <CardTitle>{backlink.title}</CardTitle>
+                    <CardDescription>{backlink.description}</CardDescription>
+                  </CardHeader>
+                </Card>
+              </a>
+            ))}
+          </div>
         </div>
-      </div>
-    ))
+      ))
 }
