Fixed internalLinks missing connection types Added backlinks to concepts

--- a/apps/site-astro/src/pages/concepts/[slug].astro
+++ b/apps/site-astro/src/pages/concepts/[slug].astro
@@ -1,6 +1,7 @@
 ---
 import MetaTags from "@/components/MetaTags.astro";
 import PortableText from "@/components/PortableText/PortableText.astro";
+import BacklinksList from "@/components/content/BacklinksList.astro";
 import TagsList from "@/components/content/TagsList.astro";
 import Layout from "@/layouts/Layout.astro";
 import { titleTemplate } from "@/lib/metadata";
@@ -39,5 +40,14 @@ const { concept } = Astro.props as Props;
 
     {concept.tags && <TagsList tags={concept.tags} asLinks={true} />}
     {concept.body && <PortableText value={concept.body} />}
+
+    {
+      concept.backlinks && concept.backlinks.length > 0 && (
+        <>
+          <h3>Backlinks</h3>
+          <BacklinksList backlinks={concept.backlinks} />
+        </>
+      )
+    }
   </article>
 </Layout>
