--- a/apps/site-astro/src/pages/resources/[slug].astro
+++ b/apps/site-astro/src/pages/resources/[slug].astro
@@ -1,10 +1,12 @@
 ---
 import MetaTags from "@/components/MetaTags.astro";
 import TagsList from "@/components/content/TagsList.astro";
+import BacklinksList from "@/components/content/BacklinksList.astro";
 import Layout from "@/layouts/Layout.astro";
 import { titleTemplate } from "@/lib/metadata";
 import { getAllResourcesFull } from "@/queries/resource";
 import type { InferGetStaticPropsType } from "astro";
+import type { Backlink } from "@/queries/partials/backlink";
 
 export async function getStaticPaths() {
   const data = await getAllResourcesFull();
@@ -25,6 +27,12 @@ export async function getStaticPaths() {
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 const { resource } = Astro.props as Props;
+
+// Prevent 'Resource Content' from showing in backlinks section
+// It will already show in the Resources content section
+function deduplicateBacklinks(backlinks: Backlink[]) {
+  return backlinks.filter((backlink) => backlink._type !== "resourceContent");
+}
 ---
 
 <Layout>
@@ -51,6 +59,15 @@ const { resource } = Astro.props as Props;
             </div>
           );
         })
+    }
+
+    {
+      resource.backlinks && resource.backlinks.length > 0 && (
+        <>
+          <h3>Backlinks</h3>
+          <BacklinksList backlinks={deduplicateBacklinks(resource.backlinks)} />
+        </>
+      )
     }
   </article>
 </Layout>
