--- a/apps/site-astro/src/layouts/Layout.astro
+++ b/apps/site-astro/src/layouts/Layout.astro
@@ -22,5 +22,8 @@ import MetaTags from "@/components/MetaTags.astro";
 	</head>
 	<body>
 		<slot />
+
+		<!-- Global scripts -->
+		<script src="src/scripts/popover.ts"></script>
 	</body>
 </html>
