--- a/apps/site-astro/src/styles/global.css
+++ b/apps/site-astro/src/styles/global.css
@@ -158,3 +158,57 @@
     @apply text-sm text-muted-foreground;
   }
 }
+
+/* Popover */
+@layer components {
+  /* Popover styles */
+  .pt-popover {
+    visibility: hidden;
+    pointer-events: none;
+    width: max-content;
+    max-width: 40ch;
+  }
+
+  .pt-popover[data-show] {
+    visibility: visible;
+    pointer-events: all;
+  }
+
+  .pt-popover-arrow,
+  .pt-popover-arrow::before {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    background: inherit;
+  }
+
+  .pt-popover-arrow {
+    visibility: hidden;
+  }
+
+  .pt-popover[data-show] .pt-popover-arrow::before {
+    visibility: visible;
+  }
+
+  .pt-popover-arrow::before {
+    visibility: hidden;
+    content: "";
+    transform: rotate(45deg);
+  }
+
+  .pt-popover[data-popper-placement^="top"] > .pt-popover-arrow {
+    bottom: -4px;
+  }
+
+  .pt-popover[data-popper-placement^="bottom"] > .pt-popover-arrow {
+    top: -4px;
+  }
+
+  .pt-popover[data-popper-placement^="left"] > .pt-popover-arrow {
+    right: -4px;
+  }
+
+  .pt-popover[data-popper-placement^="right"] > .pt-popover-arrow {
+    left: -4px;
+  }
+}
