--- a/apps/site-astro/src/components/PortableText/custom/InternalLink.astro
+++ b/apps/site-astro/src/components/PortableText/custom/InternalLink.astro
@@ -33,10 +33,8 @@ const url = new URL(getInternalLinkUrl(markDef), Astro.url);
 
       <div
         id="lieuu44uxonkamz"
-        style="position: absolute; inset: auto auto 0px 0px; margin: 0px; transform: translate3d(335px, -540.5px, 0px);"
         class="pt-popover bg-gray-50 border-2 border-gray-200 rounded-md drop-shadow-lg p-4"
-        data-popper-placement="top"
-        style={{ display: "none" }}
+        style="display: none"
       >
         <div class="flex flex-col gap-2 justify-between mt-6 leading-snug">
           <a
@@ -51,11 +49,7 @@ const url = new URL(getInternalLinkUrl(markDef), Astro.url);
             The expansion of romantic relationships beyond two people with the
             consent and knowledge of all parties involved.
           </p>
-          <div
-            class="pt-popover-arrow"
-            data-popper-arrow="true"
-            style="position: absolute; left: 0px; transform: translate3d(195.5px, 0px, 0px);"
-          />
+          <div class="pt-popover-arrow" />
         </>
       </div>
     </button>
